feat: clerk auth signup workflow mvp

--- a/src/maelstrom-platform-ui/src/app/globals.css
+++ b/src/maelstrom-platform-ui/src/app/globals.css
@@ -2,32 +2,114 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+@import '../../node_modules/@syncfusion/ej2-base/styles/bootstrap5.css';
+@import '../../node_modules/@syncfusion/ej2-react-inputs/styles/bootstrap5.css';
+@import '../../node_modules/@syncfusion/ej2-base/styles/bootstrap5.css';
+@import '../../node_modules/@syncfusion/ej2-layouts/styles/bootstrap5.css';
+@import '../../node_modules/@syncfusion/ej2-react-layouts/styles/bootstrap5.css';
+@import '../../node_modules/@syncfusion/ej2-buttons/styles/bootstrap5.css';
+@import '../../node_modules/@syncfusion/ej2-react-grids/styles/bootstrap5.css';
+@import '../../node_modules/@syncfusion/ej2-calendars/styles/bootstrap5.css';
+@import '../../node_modules/@syncfusion/ej2-dropdowns/styles/bootstrap5.css';
+@import '../../node_modules/@syncfusion/ej2-inputs/styles/bootstrap5.css';
+@import '../../node_modules/@syncfusion/ej2-navigations/styles/bootstrap5.css';
+@import '../../node_modules/@syncfusion/ej2-popups/styles/bootstrap5.css';
+@import '../../node_modules/@syncfusion/ej2-splitbuttons/styles/bootstrap5.css';
+@import '../../node_modules/@syncfusion/ej2-react-calendars/styles/bootstrap5.css';
+@import '../../node_modules/@syncfusion/ej2-icons/styles/bootstrap5.css';
+@import '../../node_modules/@syncfusion/ej2-lists/styles/bootstrap5.css';
+@import '../../node_modules/@syncfusion/ej2-richtexteditor/styles/bootstrap5.css';
+@import '../../node_modules/@syncfusion/ej2-react-navigations/styles/bootstrap5.css';
+@import '../../node_modules/@syncfusion/ej2-react-inputs/styles/bootstrap5.css';
+@import '../../node_modules/@syncfusion/ej2-react-dropdowns/styles/bootstrap5.css';
+@import "../../node_modules/@syncfusion/ej2-react-buttons/styles/bootstrap5.css";
+
+.control_wrapper.textbox-form {
+  max-width: 400px;
+  margin: auto;
+  border: 0.5px solid #bebebe;
+  box-shadow: 0 1px 3px 0 rgb(0 0 0 / 36%);
+  padding: 1% 4% 2%;
+  background: #f9f9f9;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+.form-title {
+  text-align: center;
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+.submitBtn {
+  text-align: center;
+  margin: 30px;
 }
 
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+#container {
+  margin: 20px auto 0;
+  width:450px;
+}
+
+.form-group {
+  padding-top: 11px;
+}
+
+.e-custom-label {
+  color: rgba(0, 0, 0, 0.54);
+  font-size: 13px;
+  font-weight: 500;
+  padding-top: 15px;
+  padding-bottom: 20px;
+}
+
+.landing {
+  width: 800px;
+  margin: 0 auto;
+}
+
+.welcome {
+  display: flex;
+  justify-content: center;
+}
+
+.instruction {
+  display: flex;
+  justify-content: center;
+}
+
+.signup-buttons {
+  display: flex;
+  justify-content: center;
+}
+
+.signup-button-width {
+  width: 200px;
+}
+
+.signup-account {
+  width: 800px;
+  margin: 0 auto;
+}
+
+.signup-confirmation {
+  width: 800px;
+  margin: 0 auto;
+}
+
+.signup-organization {
+  width: 800px;
+  margin: 0 auto;
+}
+
+.signup-failure {
+  width: 800px;
+  margin: 0 auto;
+}
+
+.signup-success {
+  width: 800px;
+  margin: 0 auto;
+}
+
+.valid-form-element {
+  border-color: green;
+  border-width: 5px;
+  border: solid;
 }
